--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ВЕЛЛМАР — ваш надежный поставщик строительных
+      решений. 
+      Интернет магазин строительных материалов и инструментов."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
